--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
   --fourth-color: rgba(170, 165, 165, 0.4);
   --fifth-color: rgba(30, 31, 35, 0.5);
   --sixth-color: #64a43c;
+  --seventh-color: rgba(255, 255, 255, 0.4);
 }
 
 /* general */
@@ -186,11 +187,49 @@ body {
 .photo-big {
     width: 100vw;
     height: 100vh;
-    border: 5px solid var(--second-color);
+    border: 10px solid var(--second-color);
     z-index: 5;
     position: absolute;
     top: 0;
     left: 0;
+}
+
+.photo-story {
+    width: 100%;
+    height: 70%;
+    padding: 1.5rem;
+    background: var(--seventh-color);
+    z-index: 6;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    display: none;
+}
+
+.photo-story-show {
+    display: block;
+}
+
+.photo-story-header {
+    font-size: 1rem;
+    letter-spacing: 1px;
+    position: relative;
+}
+
+.photo-story-header::after {
+    content: "";
+    width: 10%;
+    border-bottom: 1.5px solid var(--fourth-color);
+    text-align: center;
+    position: absolute;
+    bottom: -10px;
+    left: 0;
+    margin-left: 45%;
+}
+
+.photo-story-paragraph {
+    font-size: 0.8rem;
+    padding: 1rem 2rem;
 }
 
 /* about-us */
@@ -258,6 +297,7 @@ body {
     margin: 0 0 0.5rem;
     font-size: 1.5rem;
 }
+
 
 /* media queries*/
 @media only screen and (min-width: 700px) {}
