--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
   --third-color: #000;
   --fourth-color: rgba(170, 165, 165, 0.4);
   --fifth-color: rgba(30, 31, 35, 0.5);
-  --sixth-color: #64a43c;
+  --sixth-color: #50626E;
   --seventh-color: rgba(255, 255, 255, 0.4);
 }
 
@@ -141,10 +141,19 @@ body {
     padding: 4rem 0;
     background: var(--base-color);
     text-align: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 
 .gallery-background {
@@ -161,13 +170,22 @@ body {
 }
 
 .gallery-photos {
-    /* width: 100%; */
     background: var(--base-color);
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     position: relative;
 }
 
@@ -175,6 +193,8 @@ body {
     width: 100%;
     height: 300px;
     cursor: pointer;
+    -webkit-transition: width 0.6s, height 0.6s;
+    -o-transition: width 0.6s, height 0.6s;
     transition: width 0.6s, height 0.6s;
 }
 
@@ -218,7 +238,7 @@ body {
 .photo-story-header::after {
     content: "";
     width: 10%;
-    border-bottom: 1.5px solid var(--fourth-color);
+    border-bottom: 1.5px solid var(--sixth-color);
     text-align: center;
     position: absolute;
     bottom: -10px;
@@ -247,14 +267,25 @@ body {
 
 .about-us-box {
     font-size: 0.8rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 
 .about-us-box span {
     color: var(--base-color);
+    -webkit-transition: color 0.3s;
+    -o-transition: color 0.3s;
     transition: color 0.3s;
 }
 
@@ -279,7 +310,10 @@ body {
 .about-us-box-second {
     background: var(--base-color);
     color: var(--second-color);
-    flex-direction: column-reverse;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
 }
 
 .about-us-box-second .about-us-text {
@@ -306,9 +340,15 @@ body {
 
 .social-icons-section-wrapper {
     padding: 0.5rem 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 
 .social-icons-section-wrapper a {
@@ -316,6 +356,8 @@ body {
     font-size: 2rem;
     color: var(--second-color);
     opacity: 0.7;
+    -webkit-transition: opacity 0.3s;
+    -o-transition: opacity 0.3s;
     transition: opacity 0.3s;
 }
 
@@ -335,6 +377,8 @@ body {
 .footer-wrapper a {
     color: var(--second-color);
     opacity: 0.7;
+    -webkit-transition: opacity 0.6s;
+    -o-transition: opacity 0.6s;
     transition: opacity 0.6s;
 }
 
@@ -350,7 +394,10 @@ body {
     }
 
     .gallery-photos {
-        flex-direction: row;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
     }
 
     .photo {
@@ -359,7 +406,10 @@ body {
 
     .about-us-box {
         font-size: 1rem;
-        flex-direction: row;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
     }
 
     .about-us-text {
@@ -368,7 +418,10 @@ body {
     }
 
     .about-us-box-second {
-        flex-direction: row;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
     }
 
     .about-us-box-second .about-us-text {
