--- a/css/style.css
+++ b/css/style.css
@@ -334,6 +334,10 @@ body {
     font-size: 1.5rem;
 }
 
+.about-us-paragraph {
+    margin: 1rem 0;
+}
+
 /* social icons section */
 .social-icons-section {
     margin-bottom: 3rem;
